2013-07-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix title of orphaned node windows
	* don't update content of sticky node windows

2013-05-17  Hendrik Tews <prooftree@askra.de>

	* release version 0.12 on 2013-05-17 13:39:12 UTC

2013-05-17  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2013-05-17  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2013-03-28  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* copyright 2013

2013-03-27  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* change required Proof General version to 4.3pre130327

2013-03-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* another clone regression

2013-01-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix clone regression

2013-01-30  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* after release changes

2013-01-21  Hendrik Tews <prooftree@askra.de>

	* release version 0.11 on 2013-01-21 16:43:11 UTC

2013-01-21  Hendrik Tews <prooftree@askra.de>

	* prepare changes.html for release

2013-01-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* misc changes towards release

2013-01-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* implement proof script insertion

2013-01-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* implement undo
	* have a separate context menu
	* add headings in help window

2013-01-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* add scrollbar to evar table
	* add keybindings to evar window
	* add default number of lines of evar window to config
	  record, but stay at config file version 04

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* fix embarrassing evar positioning bug

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* try ocamlfind in configure for lablgtk2
	* fix ocamldoc warnings

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* write ocamldoc comments

2013-01-17  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* delete newlines in short proof commands
