@@ -1,3 +1,7 @@
+2013-07-23  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* fix wrong existential info in external node windows
+
 2013-07-18  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* fix title of orphaned node windows
